--- a/port/index.html
+++ b/port/index.html
@@ -349,6 +349,44 @@
                     </div>
                 </div>
 
+                <!-- Hackathon Project 1 (Placeholder) -->
+                <div class="card" style="border: 1px dashed var(--text-secondary); opacity: 0.7;">
+                    <div class="card-header">
+                        <i class="fas fa-microchip folder-icon" style="color: var(--text-secondary);"></i>
+                        <div class="card-links">
+                            <span class="mono text-secondary">Pending</span>
+                        </div>
+                    </div>
+                    <h3 class="card-title text-secondary">Hackathon Project 01</h3>
+                    <p class="card-desc">
+                        Upcoming hackathon project details will be updated here. Innovative security solution in
+                        progress.
+                    </p>
+                    <div class="card-tech" style="color: var(--text-secondary);">
+                        <span>Coming Soon</span>
+                        <span>...</span>
+                    </div>
+                </div>
+
+                <!-- Hackathon Project 2 (Placeholder) -->
+                <div class="card" style="border: 1px dashed var(--text-secondary); opacity: 0.7;">
+                    <div class="card-header">
+                        <i class="fas fa-satellite-dish folder-icon" style="color: var(--text-secondary);"></i>
+                        <div class="card-links">
+                            <span class="mono text-secondary">Pending</span>
+                        </div>
+                    </div>
+                    <h3 class="card-title text-secondary">Hackathon Project 02</h3>
+                    <p class="card-desc">
+                        Space reserved for future hackathon achievement. Solution architecture and stack to be
+                        announced.
+                    </p>
+                    <div class="card-tech" style="color: var(--text-secondary);">
+                        <span>Coming Soon</span>
+                        <span>...</span>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
