--- a/port/index.html
+++ b/port/index.html
@@ -446,6 +446,36 @@
                     </div>
                 </a>
 
+                <!-- Cert Placeholder 1 -->
+                <div class="cert-card"
+                    style="border: 1px dashed var(--text-secondary); opacity: 0.7; display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 200px; cursor: default;">
+                    <i class="fas fa-certificate cert-icon"
+                        style="color: var(--text-secondary); font-size: 2rem; margin-bottom: 15px;"></i>
+                    <h3 class="cert-title text-secondary">Future Cert</h3>
+                    <p class="cert-issuer">Target: OSCP/OSEP</p>
+                    <span class="mono text-secondary" style="font-size: 0.8rem; margin-top: 10px;">[IN PROGRESS]</span>
+                </div>
+
+                <!-- Cert Placeholder 2 -->
+                <div class="cert-card"
+                    style="border: 1px dashed var(--text-secondary); opacity: 0.7; display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 200px; cursor: default;">
+                    <i class="fas fa-award cert-icon"
+                        style="color: var(--text-secondary); font-size: 2rem; margin-bottom: 15px;"></i>
+                    <h3 class="cert-title text-secondary">Future Cert</h3>
+                    <p class="cert-issuer">Target: CRTO/CRTP</p>
+                    <span class="mono text-secondary" style="font-size: 0.8rem; margin-top: 10px;">[PLANNED]</span>
+                </div>
+
+                <!-- Cert Placeholder 3 -->
+                <div class="cert-card"
+                    style="border: 1px dashed var(--text-secondary); opacity: 0.7; display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 200px; cursor: default;">
+                    <i class="fas fa-unlock-alt cert-icon"
+                        style="color: var(--text-secondary); font-size: 2rem; margin-bottom: 15px;"></i>
+                    <h3 class="cert-title text-secondary">Future Cert</h3>
+                    <p class="cert-issuer">Target: BSCP/CPTS/CBBH</p>
+                    <span class="mono text-secondary" style="font-size: 0.8rem; margin-top: 10px;">[GOAL]</span>
+                </div>
+
             </div>
         </div>
     </section>
